[project]
name = "running_page"
version = "2.5.1"
description = "Default template for PDM package"
authors = [{ name = "yihong0618", email = "zouzou0208@gmail.com" }]
dependencies = [
  "httpx",
  "gpxpy==1.6.2",
  "stravalib==0.10.4",
  "appdirs>=1.4.0",
  "svgwrite>=1.1.9",
  "colour>=0.1.5",
  "s2sphere",
  "arrow",
  "geopy",
  "polyline",
  "sqlalchemy",
  "tzfpy; platform_system != \"Windows\"",
  "timezonefinder; platform_system == \"Windows\"",
  "pyyaml",
  "aiofiles",
  "cloudscraper",
  "tcxreader",
  "rich",
  "lxml",
  "eviltransform",
  "stravaweblib",
  "tenacity",
  "numpy",
  "tzlocal",
  "garmin-fit-sdk",
  "haversine==2.8.0",
  "garth",
  "pycryptodome",
  "duckdb",
  "openai",
  "svglib>=1.5.1",
  "cairosvg>=2.7.1",
  "certifi==2025.1.31",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
